crates/ars-components/src/input/switch/snapshots/ars_components__input__switch__tests__switch_control_disabled_readonly_invalid.snap
---
source: crates/ars-components/src/input/switch/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).control_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "control",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "switch",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "unchecked",
            ),
        ),
        (
            Aria(
                Checked,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                ErrorMessage,
            ),
            String(
                "wifi-error-message",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "wifi-label",
            ),
        ),
        (
            Aria(
                ReadOnly,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "wifi-error-message",
            ),
        ),
        (
            Id,
            String(
                "wifi-control",
            ),
        ),
        (
            Role,
            String(
                "switch",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
