crates/ars-components/src/input/switch/snapshots/ars_components__input__switch__tests__switch_control_off.snap
---
source: crates/ars-components/src/input/switch/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).control_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "control",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "switch",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "unchecked",
            ),
        ),
        (
            Aria(
                Checked,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "wifi-label",
            ),
        ),
        (
            Id,
            String(
                "wifi-control",
            ),
        ),
        (
            Role,
            String(
                "switch",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
