crates/ars-components/src/input/switch/snapshots/ars_components__input__switch__tests__switch_description_default.snap
---
source: crates/ars-components/src/input/switch/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).description_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "switch",
            ),
        ),
        (
            Id,
            String(
                "wifi-description",
            ),
        ),
    ],
    styles: [],
}
